--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ pytorch_lightning==2.1.2
 sentencepiece==0.1.99
 protobuf==4.25.1
 bitsandbytes==0.41.2
+peft==0.6.2
 # torch
 # torchaudio
 # torchlibrosa
